siduxcc (0.5.6.9) UNRELEASED; urgency=low

  [ Stefan Lippers-Hollmann ]
  * NOT RELEASED YET

  [ Fabian Wuertz ]
  * NOT RELEASED YET
  * new hardware module added
  * copyrigth-file updated 

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 17 Aug 2007 18:56:23 +0200

siduxcc (0.5.6.8) unstable; urgency=low

  * siduxcc_software: new design
  * siduxcc_software: timeout for duWarnings
  * siduxcc_network: ndiswrapper link fixed
  * siduxcc_info: de-translation fixed
  * siduxcc_kernel: timeout for kernelsearch
  * new hardware module added 

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 17 Aug 2007 18:19:57 +0200

siduxcc (0.5.6.7) unstable; urgency=low

  * add Type=Application to siduxcc-hermes.desktop, "thanks to aka_sidux".

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 12 Aug 2007 23:19:09 +0200

siduxcc (0.5.6.6) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * remove #!/bin/bash from modules.

  [ Fabian Wuertz ]
  * siduxcc-hermes: du-detection fixed
  * siduxcc_info: changed to a normal application

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 02 Aug 2007 20:10:29 +0200

siduxcc (0.5.6.5) unstable; urgency=low

  * (build-) depend on gettext[-base].

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 30 Jul 2007 23:50:10 +0200

siduxcc (0.5.6.4) unstable; urgency=low

  * siduxcclib added

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 25 Jul 2007 23:16:45 +0200

siduxcc (0.5.6.3) unstable; urgency=low

  * kde-menu entries added

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 19 Jul 2007 11:52:29 +0200

siduxcc (0.5.6.2) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * apache v1.3 is about to be removed from debian, don't offer it in siduxcc.

  [ Fabian Wuertz ]
  * siduxcc_kernel: second progressbar added

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 12 Jul 2007 11:30:36 +0200

siduxcc (0.5.6.1) unstable; urgency=low

  * siduxcc_network small design fix
  * siduxcc_kernel small design fix
