@@ -35,6 +35,10 @@ Copyright:
 	(c) 2007 Kel Modderman <kel@otaku42.de>
 	siduxcc/modules/hardware.bm
 
+	The following file is based on install-meta from:
+	(c) 2007 Horst Tritremmel <hjt@sidux.com>
+	siduxcc/modules/hardware.bm
+
 	The following files are based on kio_resources from Luke Sandell <lasandell@gmail.com>
 	network_kioslave/kio_network.cpp
 	network_kioslave/kio_network.h
