@@ -132,6 +132,7 @@ function install()
 function addSources()
 {
 	# this function adds sources to install non-free firmware
+	# this function is based on install-meta from Horst Tritremmel <hjt@sidux.com>
 
 	[ -z "$(grep deb\ .*debian\.org.*main.*contrib /etc/apt/sources.list)" ] && sed -ie 's/deb \(.*\)debian.org\/debian unstable \(.*\)/deb \1debian.org\/debian unstable main contrib non-free/' /etc/apt/sources.list || echo found deb *contrib in sources.list for debian
 
