@@ -370,12 +370,12 @@
                 <widget class="QComboBox">
                     <item>
                         <property name="text">
-                            <string>System</string>
+                            <string>detected</string>
                         </property>
                     </item>
                     <item>
                         <property name="text">
-                            <string>All</string>
+                            <string>all</string>
                         </property>
                     </item>
                     <property name="name">
