@@ -6,9 +6,10 @@ siduxcc (0.5.6.9) UNRELEASED; urgency=low
   [ Fabian Wuertz ]
   * NOT RELEASED YET
   * new hardware module added
-  * copyrigth-file updated 
+  * copyrigth-file updated
+  * siduxcc_hardware: de-translation improved  
 
- -- Fabian Wuertz <xadras@sidux.com>  Fri, 17 Aug 2007 18:56:23 +0200
+ -- Fabian Wuertz <xadras@sidux.com>  Fri, 17 Aug 2007 22:04:53 +0200
 
 siduxcc (0.5.6.8) unstable; urgency=low
 
